fixed overlapping home animation

--- a/frontend/src/components/Loading/Loading.css
+++ b/frontend/src/components/Loading/Loading.css
@@ -84,7 +84,7 @@ h2 {
   
   .noot-8 {
     top: 35px;
-    left: 90%;
+    left: 80%;
     animation-delay: 2.1s;
   }
   
